# rt2_assignment1

./: CMakeLists.txt  Doxyfile.in  README.md  all_nodes.sh  conf.py  coppeliascene.ttt  mapping_rules.yaml  package.xml  rt2_assignment2.ipynb
action/: ReachGoal.action
docs/doctrees/: environment.pickle  index.doctree
docs/html/: annotated.html  classes.html  classgo__to__point_1_1_reach_goal_action-members.html  classgo__to__point_1_1_reach_goal_action.html  classgo__to__point_1_1_reach_goal_action__coll__graph.map  classgo__to__point_1_1_reach_goal_action__inherit__graph.md5  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  genindex.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  md__r_e_a_d_m_e.html  menudata.js  namespacego__to__point.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceuser__interface.html  objects.inv  pages.html  position__service_8cpp.html  position__service_8cpp__incl.map  position__service_8cpp__incl.md5  py-modindex.html  search.html  searchindex.js  state__machine_8cpp.html  state__machine_8cpp__incl.map  state__machine_8cpp__incl.md5  user__interface_8py.html
docs/html/_modules/: index.html
docs/html/_sources/: index.rst.txt
docs/html/latex/: classgo__to__point_1_1_reach_goal_action.tex  classgo__to__point_1_1_reach_goal_action__inherit__graph.md5
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  (+21 more)
docs/latex/: annotated.tex  classgo__to__point_1_1_reach_goal_action.tex  files.tex  hierarchy.tex  namespacego__to__point.tex  namespaceuser__interface.tex  position__service_8cpp.tex  position__service_8cpp__incl.md5  refman.tex  state__machine_8cpp.tex  state__machine_8cpp__incl.md5  user__interface_8py.tex
docs/xml/: _c_make_lists_8txt.xml  classgo__to__point_1_1_reach_goal_action.xml  conf_8py.xml  go__to__point_8py.xml  index.xml  namespaceconf.xml  namespacego__to__point.xml  namespacert2__assignment1.xml  namespaceuser__interface.xml  position__service_8cpp.xml  state__machine_8cpp.xml  user__interface_8py.xml
jupyter_notebook/: rt2_assignment1.ipynb  rt2_assignment2.ipynb
launch/: all_launch.py
scripts/: go_to_point.py  user_interface.py
src/: position_service.cpp  state_machine.cpp
(+2 files in other folders)
